<resources>
    <string name="app_name">微足迹</string>
    <string name="app_name_chinese">微足迹</string>
    <string name="map">地图</string>
    <string name="questionnaire">问卷</string>
    <string name="mine">我的</string>
    <string name="trace">轨迹</string>
    <string name="refresh">刷新</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="error_network">搜索失败,请检查网络连接！</string>
    <string name="error_key">key验证无效！</string>
    <string name="error_other">未知错误，请稍后重试!错误码为</string>
    <string name="all_offline">所有城市</string>
    <string name="advice_title">意见反馈</string>
    <string name="id">账号</string>
    <string name="idlable_div">账号：</string>
    <string name="id_div">帐\u3000\u3000号 </string>
    <string name="id_star">帐\u3000\u3000号 *</string>
    <string name="id_illegal">账号不合法</string>
    <string name="pwd">密码</string>
    <string name="confirm_pwd">确认</string>
    <string name="pwd_star">密\u3000\u3000码 *</string>
    <string name="pwd_hint">填写任意长度密码</string>
    <string name="pwd_confirm">密码确认*</string>
    <string name="pwd_same">填写相同密码</string>
    <string name="telenum">你的11位手机号码</string>
    <string name="storeidpwd">记住账号密码</string>
    <string name="forgetpwd">忘记密码</string>
    <string name="agree">我同意</string>
    <string name="protocol">本软件许可和服务协议</string>
    <string name="register">注册</string>
    <string name="tips_register">请先注册</string>
    <string name="register_succ">注册成功</string>
    <string name="register_fail_exist">该用户已注册</string>
    <string name="login">登录</string>
    <string name="login_visiter">游客身份登录</string>
    <string name="change_password">密码修改</string>
    <string name="oldpwd_div">原密码*</string>
    <string name="oldpwd">原密码</string>
    <string name="newpwd_div">新密码*</string>
    <string name="newpwd">新密码</string>
    <string name="input_pwd">输入密码</string>
    <string name="input_pwd_again">再次输入密码</string>
    <string name="confirm_newpwd">新密码确认*</string>
    <string name="savechange">保存修改</string>
    <string name="save">保存</string>
    <string name="register_info">注册账号</string>
    <string name="downmap_title">选择离线地图</string>
    <string name="downmap_amap">下载高德离线地图</string>
    <string name="downmap_bmap">下载百度离线地图</string>
    <string name="getofflinecitylist">正在获取离线城市列表</string>
    <string name="tips_startdownmap">开始下载离线地图,城市：</string>
    <string name="choosemaptype">请选择地图模式</string>
    <string name="amap_vector">高德矢量地图</string>
    <string name="amap_satallite">高德卫星地图</string>
    <string name="google_map">谷歌标准地图</string>
    <string name="google_map_satallite">谷歌卫星地图</string>
    <string name="google_map_landform">谷歌地形图</string>
    <string name="bmap_vector">百度矢量地图</string>
    <string name="bmap_satallite">百度卫星地图</string>
    <string name="find_pwd">找回密码</string>
    <string name="yourid_div">你的账号*</string>
    <string name="yourid">你的账号</string>
    <string name="input_your_id">请输入手机号</string>
    <string name="input_your_pwd">请输入密码</string>
    <string name="phone_number">手机号</string>
    <string name="verification_code">验证码</string>
    <string name="short_msg_verification_code">短信验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="register_pwd">密\u3000码</string>
    <string name="register_confirm_pwd">确\u3000认</string>
    <string name="register_pwd_tips">密码需6-20位数字、字母和符号的组合，不能包含空格</string>
    <string name="complete">完成</string>
    <string name="secondpwd_div">备用密码*</string>
    <string name="input_secpwd">输入备用密码</string>
    <string name="tofindpwd">用于找回密码</string>
    <string name="resetpwd">重置密码</string>
    <string name="upload_photo">上传照片</string>
    <string name="addpoi">添加兴趣点</string>
    <string name="addplace">具体地点</string>
    <string name="photo">拍照</string>
    <string name="select">选择</string>
    <string name="comment">评论</string>
    <string name="cancl">取消</string>
    <string name="cancel_withdiv">\u3000取消\u3000|</string>
    <string name="download_withdiv">\u3000下载\u3000|</string>
    <string name="delete_withdiv">|\u3000删除\u3000</string>
    <string name="delete">删除</string>
    <string name="upload_withdiv">\u3000上传\u3000|</string>
    <string name="downupload_withdiv">\u3000备份\u3000|</string>
    <string name="total">共计</string>
    <string name="confirm">确定</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="assume">确认</string>
    <string name="submit">提交</string>
    <string name="allpic">所有图片</string>
    <string name="commited">评论已上传</string>
    <string name="saysomethint">说点什么...</string>
    <string name="advicehint">我要吐槽...</string>
    <string name="tips">提示</string>
    <string name="areyousuredelete">确认移除已添加图片吗？</string>
    <string name="repeat">请不要选择重复图片</string>
    <string name="place">显示地点</string>
    <string name="pushtogetmore">上拉加载更多 </string>
    <string name="nomorethan9">最多只能添加9个文件</string>
    <string name="cantusingsdcard">sd卡不可用</string>
    <string name="addpicture">添加图片</string>
    <string name="inputyourplace">输入地名...</string>
    <string name="time">时间:</string>
    <string name="speed">速度</string>
    <string name="speedunit">km/h</string>
    <string name="person_center">个人中心</string>
    <string name="person_info">个人信息</string>
    <string name="mydata">我的资料</string>
    <string name="mygroup">我的群组</string>
    <string name="nickname">昵称：</string>
    <string name="nickname_div">昵\u3000\u3000称</string>
    <string name="nickname_star">昵\u3000\u3000称*</string>
    <string name="nickname_hint">例如：足迹</string>
    <string name="birthday">生日</string>
    <string name="birthday_div">生\u3000\u3000日</string>
    <string name="birthday_star">生\u3000\u3000日*</string>
    <string name="doubleclick">双击此处</string>
    <string name="singleclick">单击此处</string>
    <string name="zero">0</string>
    <string name="double_zero">0.0</string>
    <string name="calories_zero">0.0</string>
    <string name="velocity_zero">0.0</string>
    <string name="download_offline">下载管理</string>
    <string name="notification_txt">定位服务运行中</string>
    <string name="notification_title">足迹</string>
    <string name="notification_message">定位服务正在运行</string>
    <string name="step_label_today">今日步数</string>
    <string name="step_label">步数</string>
    <string name="step_count">0</string>
    <string name="distance_label">距离</string>
    <string name="distance">0</string>
    <string name="start_time">开始时间</string>
    <string name="duration_label">耗时</string>
    <string name="interest_point">兴趣点</string>
    <string name="time_value">00:00:00</string>
    <string name="calorie_label">热量</string>
    <string name="calorie">0千卡</string>
    <string name="calorie_unit">千卡</string>
    <string name="dis_unit">公里</string>
    <string name="month">月份</string>
    <string name="y_lable">步数（卡路里）</string>
    <string name="beijing">北京</string>
    <string name="totalsize">总大小</string>
    <string name="seetrace">查看轨迹</string>
    <string name="logout">退出当前账号</string>
    <string name="userguide">使用帮助</string>
    <string name="startpoint">起点：</string>
    <string name="starticon">起点</string>
    <string name="endpoint">终点：</string>
    <string name="endicon">终点</string>
    <string name="mytrace">我的轨迹</string>
    <string name="filter">过滤</string>
    <string name="mark">标记</string>
    <string name="local">本地</string>
    <string name="cloud">云端</string>
    <string name="input_tracename">请输入轨迹名称</string>
    <string name="choosetype">选择轨迹类型</string>
    <string name="testtrace">测试轨迹</string>
    <string name="tips_localnotrace">没有轨迹？赶快记录属于你的精彩轨迹吧！</string>
    <string name="tips_cloudnotrace">云端没有轨迹，点此刷新试试</string>
    <string name="tips_cloudnewtrace">发现新轨迹，下拉刷新查看</string>
    <string name="tips_cloudnotrace_nonet">网络异常，请连接网络后点此刷新</string>
    <string name="tips_selectvideo">请选择小于20M的视频</string>
    <string name="tips_advicesubmit">请输入您的宝贵建议</string>
    <string name="tips_advicesuccess">感谢您的宝贵建议，谢谢</string>
    <string name="tips_postfail">操作失败，请稍后再试</string>
    <string name="tips_getcommentsuccess">获取评论成功</string>
    <string name="tips_netdisconnect">网络异常，请检查网络连接</string>
    <string name="tips_cannotaddmark">网络异常，无法添加标注</string>
    <string name="tips_uploadpic_neterror">当前网络状况不佳，等待网络连接后上传照片</string>
    <string name="tips_npwdnull">新密码不能为空</string>
    <string name="tips_pwdnull">密码不能为空</string>
    <string name="tips_npwdillegal">新密码含有非法字符?、!、#等</string>
    <string name="tips_npwddiffer">两次新密码不一致</string>
    <string name="tips_pwddiffer">两次密码不一致</string>
    <string name="tips_opwderror">原密码不正确</string>
    <string name="tips_pwdchangeok">修改密码成功</string>
    <string name="tip">提示</string>
    <string name="tips_changing">修改中，请稍后</string>
    <string name="tips_takepicfail">拍照失败，请重试或从相册选择照片！</string>
    <string name="tips_choosevideofail">无法选择视频，请确认媒体库状态！</string>
    <string name="tips_takevideofail">录像失败，请重试或从文件管理器选择视频！</string>
    <string name="tips_commentsubmit">只能上传有内容的记录！</string>
    <string name="tips_selectbehaviour">请选择活动类型</string>
    <string name="tips_selectduration">请选择停留时长</string>
    <string name="tips_selectpartnernum">请选择同伴人数</string>
    <string name="tips_selectrelationship">请选择同伴关系</string>
    <string name="tips_uploadinbgbegin">正在上传，可在【兴趣点】或【我的相册】查看</string>
    <string name="tips_uploadinbg">上传照片进度</string>
    <string name="tips_uploadfaildlg_msg1">上传第</string>
    <string name="tips_uploadfaildlg_msg2">个文件</string>
    <string name="tips_uploadfaildlg_msg3">，是否重新传输？</string>
    <string name="tips_fail">失败</string>
    <string name="tips_success">成功</string>
    <string name="tips_error">出错</string>
    <string name="tryagain">重试</string>
    <string name="tips_docancle">操作取消</string>
    <string name="tips_dofail">操作失败，请重试或使用其它方式</string>
    <string name="tips_savepath">新照片保存在</string>
    <string name="tips_norighttomkdir">手机不支持新建文件夹，退出拍照</string>
    <string name="tips_findsdfail">没有找到储存目录</string>
    <string name="tips_createfilefail">拍照遇到问题了，请点击上方的“+”选择照片吧</string>
    <string name="exitgroup">退出群</string>
    <string name="nojoinedgroup">您还没有加入任何群，在【添加群】中查找您感兴趣的群加入吧，点我刷新</string>
    <string name="tuli">历史运动数据(绿色表示步数,黄色表示卡路里)</string>
    <string name="refreshbtn">立即同步</string>
    <string name="system_settings">系统设置</string>
    <string name="auto_update_switch_title">自动检查更新</string>
    <string name="auto_update_switch_key">auto_update_switch</string>
    <string name="auto_update_switch_summary_on">开启自动检查更新</string>
    <string name="auto_update_switch_summary_off">关闭自动检查更新</string>
    <string name="auto_upload_switch_title">仅WiFi状态下上传位置</string>
    <string name="auto_upload_switch_key">auto_upload_switch</string>
    <string name="auto_upload_switch_summary_on">仅限WiFi网络状态下上传</string>
    <string name="auto_upload_switch_summary_off">WiFi、GPRS(2G/3G/4G)网络状态下均可上传</string>
    <string name="auto_uploadpic_switch_title">仅WiFi状态下上传视频、图片</string>
    <string name="auto_uploadpic_switch_key">auto_uploadpic_switch</string>
    <string name="auto_uploadpic_switch_summary_on">仅限WiFi网络状态下上传</string>
    <string name="auto_uploadpic_switch_summary_off">WiFi、GPRS(2G/3G/4G)网络状态下均可上传</string>
    <string name="auto_update_frequency_title">时间参数更新频率</string>
    <string name="auto_update_frequency_key">auto_update_frequency</string>
    <string name="auto_update_frequency_default_value">60</string>
    <string name="auto_update_frequency_summary">设置时间参数更新的时间周期</string>
    <string name="auto_upload_frequency_title">位置上传时间间隔</string>
    <string name="auto_upload_frequency_key">auto_upload_frequency</string>
    <string name="auto_upload_frequency_default_value">30</string>
    <string name="auto_upload_frequency_summary">设置位置上传时间间隔</string>
    <string name="auto_record_loc_frequency_title">定位时间间隔</string>
    <string name="auto_record_loc_frequency_key">auto_rec_loc_frequency</string>
    <string name="auto_record_loc_frequency_default_value">5</string>
    <string name="auto_record_loc_frequency_summary">设置记录状态下定位时间间隔</string>
</resources>