<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.trackersurvey.happynavi.RegisterActivity"
    android:orientation="vertical"
    android:background="#E7EAF9">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/app_logo"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <EditText
            android:id="@+id/et_userid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_your_id"
            android:textColorHint="@color/gray"
            android:background="@drawable/shape_corner_et"
            android:layout_centerInParent="true"
            android:padding="10dp"
            android:layout_marginRight="40dp"
            android:textColor="@color/black"
            android:inputType="phone"
            android:textSize="15sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verification_code"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp">
            <EditText
                android:id="@+id/et_verification_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/short_msg_verification_code"
                android:textColorHint="@color/gray"
                android:background="@drawable/shape_corner_et"
                android:layout_centerInParent="true"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="15sp"/>
            <Button
                android:id="@+id/btn_get_verification_code"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/get_verification_code"
                android:layout_alignParentRight="true"
                android:background="@drawable/shape_corner_get_vrf_btn"
                android:layout_margin="5dp"/>

        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_pwd"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_your_pwd"
            android:textColorHint="@color/gray"
            android:background="@drawable/shape_corner_et"
            android:layout_centerInParent="true"
            android:padding="10dp"
            android:layout_marginRight="40dp"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:textSize="15sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_confirm_pwd"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <EditText
            android:id="@+id/et_confirm_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_pwd_again"
            android:textColorHint="@color/gray"
            android:background="@drawable/shape_corner_et"
            android:layout_centerInParent="true"
            android:padding="10dp"
            android:layout_marginRight="40dp"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:textSize="15sp"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_pwd_tips"
        android:textColor="@color/black"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/register_complete"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/complete"
        android:layout_gravity="center"
        android:background="@drawable/shape_corner_complete_btn"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"/>

</LinearLayout>
