<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.trackersurvey.happynavi.LoginActivity"
    android:orientation="vertical"
    android:background="#E7EAF9">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/app_logo"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/et_userid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_your_id"
        android:textColorHint="@color/gray"
        android:background="@drawable/shape_corner_et"
        android:layout_centerInParent="true"
        android:padding="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:inputType="phone"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_your_pwd"
        android:textColorHint="@color/gray"
        android:background="@drawable/shape_corner_et"
        android:layout_centerInParent="true"
        android:padding="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:textSize="15sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="40dp">
        <CheckBox
            android:id="@+id/agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/agree"
            android:textColor="#353535"
            android:textSize="16dp" />
        <TextView
            android:id="@+id/protocal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/protocol"
            android:textColor="#576B95"
            android:textSize="16dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:background="@drawable/shape_corner_login"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:text="@string/register"
        android:textColor="@color/white"
        android:background="@drawable/shape_corner_register"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"/>

</LinearLayout>
